[FIXED] Downgrade esp-hal to 0.16

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,6 @@ opt-level = 3
 [dependencies]
 rtic = { git = "https://github.com/Wassasin/rtic", branch = "feature/esp32c6", features = ["riscv-esp32c6-backend"] }
 esp-backtrace = { version = "0.11", features = ["esp32c6", "panic-handler", "exception-handler", "println"] }
-esp-hal = { version = "0.17", features = ["esp32c6"] }
+esp-hal = { version = "0.16", features = ["esp32c6", "direct-vectoring"] }
 esp-println = { version = "0.9", default-features = false, features = ["esp32c6", "critical-section", "colors", "jtag-serial"] }
 esp32c6 = {version = "0.12", features = ["critical-section"]}
